[package]
name = "pingora-enclavia"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Pingora-based proxy with an attested Noise tunnel to a Nitro enclave."
publish = false

[[bin]]
name = "pingora-enclavia"
path = "src/main.rs"

[[bin]]
name = "noise-echo"
path = "test/noise-echo/src/main.rs"

[features]
default = []

[dependencies]
# Tunnel implementation lives in the upstream enclavia SDK
# (`Client::open_stream`). pingora-enclavia just wraps the resulting
# `UpgradedStream` as a pingora `Stream`. The protocol crate is still
# pulled in transitively (for `Pcrs`) but pingora-enclavia no longer
# depends on it directly; `enclavia` re-exports what we need.
enclavia = { path = "/home/afilini/workspace/enclavia/enclavia" }
enclavia-protocol = { path = "/home/afilini/workspace/enclavia/enclavia-protocol", default-features = false, features = ["async-transport", "test-utils"] }

pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"

async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "time", "sync", "signal", "fs"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"

# Dynamic config: notify watches /run/enclavia/proxy-targets, serde_json
# parses each file.
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
# Carried for the legacy static config.toml path, removed once main.rs
# pivots to --config-dir only.
toml = "0.8"

# Required by src/test_responder.rs, which is compiled into the lib and
# linked by the `noise-echo` test binary. The production
# pingora-enclavia binary doesn't use them directly any more, but moving
# them to [dev-dependencies] would break the noise-echo build.
ciborium = "0.2"
snow = "0.9"

hex = "0.4"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tungstenite = "0.26"
sha1 = "0.10"
base64 = "0.22"
tempfile = "3"
