[package]
name = "pingora-enclavia"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Pingora-based proxy with an attested Noise tunnel to a Nitro enclave."
publish = false

[[bin]]
name = "pingora-enclavia"
path = "src/main.rs"

[[bin]]
name = "noise-echo"
path = "test/noise-echo/src/main.rs"

[features]
default = []

[dependencies]
# Tunnel implementation lives in the upstream enclavia SDK
# (`Client::open_stream`). pingora-enclavia just wraps the resulting
# `UpgradedStream` as a pingora `Stream`. Pinned by rev so a fresh
# clone here is reproducible against a single commit of
# EnclaviaIO/enclavia.
enclavia = { git = "https://github.com/EnclaviaIO/enclavia", rev = "91b538229717390fc95de8c0daf18dbd7177a839" }
enclavia-protocol = { git = "https://github.com/EnclaviaIO/enclavia", rev = "91b538229717390fc95de8c0daf18dbd7177a839", default-features = false, features = ["async-transport", "test-utils"] }

pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"

async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "time", "sync", "signal", "fs"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"

# Dynamic config: notify watches /run/enclavia/proxy-targets, serde_json
# parses each file.
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

# Required by src/test_responder.rs, which is compiled into the lib and
# linked by the `noise-echo` test binary. The production
# pingora-enclavia binary doesn't use them directly any more, but moving
# them to [dev-dependencies] would break the noise-echo build.
ciborium = "0.2"
snow = "0.9"

hex = "0.4"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tungstenite = "0.26"
sha1 = "0.10"
base64 = "0.22"
tempfile = "3"
